5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1758_762.log
== SUBMITION (2019-05-27 13:42:59) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(eval(input("Insira o vetor: ")))
v = vet_mes,dtype=int
if((v[4] == 1) and (v[3] == 0)):
	print(v[1],v[2], "Janeiro", v[5], v[6], v[7], v[8])
elif((v[4] == 2) and (v[3] == 0)):
	print(v[1],v[2], "fevereiro", v[5], v[6], v[7], v[8])
elif((v[4] == 2) and (v[3] == 0)):
	print(v[1],v[2], "marco", v[5], v[6], v[7], v[8])
elif((v[4] == 2) and (v[3] == 0)):
	print(v[1],v[2], "abril", v[5], v[6], v[7], v[8])
elif((v[4] == 2) and (v[3] == 0)):
	print(v[1],v[2], "maio", v[5], v[6], v[7], v[8])
elif((v[4] == 2) and (v[3] == 0)):
	print(v[1],v[2], "junho", v[5], v[6], v[7], v[8])
elif((v[4] == 2) and (v[3] == 0)):
	print(v[1],v[2], "julho", v[5], v[6], v[7], v[8])
elif((v[4] == 2) and (v[3] == 0)):
	print(v[1],v[2], "agosto", v[5], v[6], v[7], v[8])
elif((v[4] == 2) and (v[3] == 0)):
	print(v[1],v[2], "setembro", v[5], v[6], v[7], v[8])
elif((v[4] == 2) and (v[3] == 0)):
	print(v[1],v[2], "outubro", v[5], v[6], v[7], v[8])
elif((v[4] == 2) and (v[3] == 0)):
	print(v[1],v[2], "novembro", v[5], v[6], v[7], v[8])
elif((v[4] == 2) and (v[3] == 0)):
	print(v[1],v[2], "dezenbro", v[5], v[6], v[7], v[8])
-- EXECUTION TIME:
0.35683
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/762/main.py", line 4, in <module>
    v = vet_mes,dtype=int
TypeError: 'type' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:43:18) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(eval(input("Insira o vetor: ")))
v = vet_mes,dtype=int
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:45:36) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(eval(input("Insira o vetor: ")))
if(v(3:4) == 01):
	mes = janeiro
print(v(:2),mes,v(5:))
-- ERROR:
File "XXXX", line 4
    if(v(3:4) == 01):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:45:43) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(eval(input("Insira o vetor: ")))
if(v(3:4) == 1):
	mes = janeiro
print(v(:2),mes,v(5:))
-- ERROR:
File "XXXX", line 4
    if(v(3:4) == 1):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:45:53) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(eval(input("Insira o vetor: ")))
if(v(3:5) == 1):
	mes = janeiro
print(v(:2),mes,v(5:))
-- ERROR:
File "XXXX", line 4
    if(v(3:5) == 1):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:16:36) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = input("Insira o vetor: ")

if(v(3:5) == 1):
	mes = janeiro
print(v(:2),mes,v(5:))
-- ERROR:
File "XXXX", line 5
    if(v(3:5) == 1):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:52:52) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = input("Insira o vetor: ")

if((v[3] == 0) and (v[4] == 1)):
	mes = "janeiro"
elif((v[3] == 0) and (v[4] == 2)):
	mes = "fevereiro"
elif((v[3] == 0) and (v[4] == 3)):
	mes = "marco"
elif((v[3] == 0) and (v[4] == 4)):
	mes = "abril"
elif((v[3] == 0) and (v[4] == 5)):
	mes = "maio"
elif((v[3] == 0) and (v[4] == 6)):
	mes = "junho"
elif((v[3] == 0) and (v[4] == 7)):
	mes = "julho"
elif((v[3] == 0) and (v[4] == 8)):
	mes = "agosto"
elif((v[3] == 0) and (v[4] == 9)):
	mes = "setembro"
elif((v[3] == 0) and (v[4] == 10)):
	mes = "outubro"
elif((v[3] == 0) and (v[4] == 11)):
	mes = "novembro"
elif((v[3] == 0) and (v[4] == 12)):
	mes = "dezembro"
print(v(:2),mes,v(5:))
-- ERROR:
File "XXXX", line 29
    print(v(:2),mes,v(5:))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:54:04) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = input("Insira o vetor: ")
v1 = v, dtype=int
if((v[3] == 0) and (v[4] == 1)):
	mes = "janeiro"
elif((v[3] == 0) and (v[4] == 2)):
	mes = "fevereiro"
elif((v[3] == 0) and (v[4] == 3)):
	mes = "marco"
elif((v[3] == 0) and (v[4] == 4)):
	mes = "abril"
elif((v[3] == 0) and (v[4] == 5)):
	mes = "maio"
elif((v[3] == 0) and (v[4] == 6)):
	mes = "junho"
elif((v[3] == 0) and (v[4] == 7)):
	mes = "julho"
elif((v[3] == 0) and (v[4] == 8)):
	mes = "agosto"
elif((v[3] == 0) and (v[4] == 9)):
	mes = "setembro"
elif((v[3] == 0) and (v[4] == 10)):
	mes = "outubro"
elif((v[3] == 0) and (v[4] == 11)):
	mes = "novembro"
elif((v[3] == 0) and (v[4] == 12)):
	mes = "dezembro"
msg = 
-- ERROR:
File "XXXX", line 29
    msg = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:54:13) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = input("Insira o vetor: ")
v1 = v, dtype=int
if((v[3] == 0) and (v[4] == 1)):
	mes = "janeiro"
elif((v[3] == 0) and (v[4] == 2)):
	mes = "fevereiro"
elif((v[3] == 0) and (v[4] == 3)):
	mes = "marco"
elif((v[3] == 0) and (v[4] == 4)):
	mes = "abril"
elif((v[3] == 0) and (v[4] == 5)):
	mes = "maio"
elif((v[3] == 0) and (v[4] == 6)):
	mes = "junho"
elif((v[3] == 0) and (v[4] == 7)):
	mes = "julho"
elif((v[3] == 0) and (v[4] == 8)):
	mes = "agosto"
elif((v[3] == 0) and (v[4] == 9)):
	mes = "setembro"
elif((v[3] == 0) and (v[4] == 10)):
	mes = "outubro"
elif((v[3] == 0) and (v[4] == 11)):
	mes = "novembro"
elif((v[3] == 0) and (v[4] == 12)):
	mes = "dezembro"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:54:24) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = input("Insira o vetor: ")
v1 = v, dtype=int
if((v[3] == 0) and (v[4] == 1)):
	mes = "janeiro"
elif((v[3] == 0) and (v[4] == 2)):
	mes = "fevereiro"
elif((v[3] == 0) and (v[4] == 3)):
	mes = "marco"
elif((v[3] == 0) and (v[4] == 4)):
	mes = "abril"
elif((v[3] == 0) and (v[4] == 5)):
	mes = "maio"
elif((v[3] == 0) and (v[4] == 6)):
	mes = "junho"
elif((v[3] == 0) and (v[4] == 7)):
	mes = "julho"
elif((v[3] == 0) and (v[4] == 8)):
	mes = "agosto"
elif((v[3] == 0) and (v[4] == 9)):
	mes = "setembro"
elif((v[3] == 0) and (v[4] == 10)):
	mes = "outubro"
elif((v[3] == 0) and (v[4] == 11)):
	mes = "novembro"
elif((v[3] == 0) and (v[4] == 12)):
	mes = "dezembro"
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:54:47) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = input("Insira o vetor: ")
v1 = int(v)
if((v[3] == 0) and (v[4] == 1)):
	mes = "janeiro"
elif((v[3] == 0) and (v[4] == 2)):
	mes = "fevereiro"
elif((v[3] == 0) and (v[4] == 3)):
	mes = "marco"
elif((v[3] == 0) and (v[4] == 4)):
	mes = "abril"
elif((v[3] == 0) and (v[4] == 5)):
	mes = "maio"
elif((v[3] == 0) and (v[4] == 6)):
	mes = "junho"
elif((v[3] == 0) and (v[4] == 7)):
	mes = "julho"
elif((v[3] == 0) and (v[4] == 8)):
	mes = "agosto"
elif((v[3] == 0) and (v[4] == 9)):
	mes = "setembro"
elif((v[3] == 0) and (v[4] == 10)):
	mes = "outubro"
elif((v[3] == 0) and (v[4] == 11)):
	mes = "novembro"
elif((v[3] == 0) and (v[4] == 12)):
	mes = "dezembro"
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:06:42) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = input("Insira o vetor: ")
v1 = int(v)
if((v[3] == 0) and (v[4] == 1)):
	mes = "janeiro"
elif((v[3] == 0) and (v[4] == 2)):
	mes = "fevereiro"
elif((v[3] == 0) and (v[4] == 3)):
	mes = "marco"
elif((v[3] == 0) and (v[4] == 4)):
	mes = "abril"
elif((v[3] == 0) and (v[4] == 5)):
	mes = "maio"
elif((v[3] == 0) and (v[4] == 6)):
	mes = "junho"
elif((v[3] == 0) and (v[4] == 7)):
	mes = "julho"
elif((v[3] == 0) and (v[4] == 8)):
	mes = "agosto"
elif((v[3] == 0) and (v[4] == 9)):
	mes = "setembro"
elif((v[3] == 1) and (v[4] == 0)):
	mes = "outubro"
elif((v[3] == 1) and (v[4] == 1)):
	mes = "novembro"
elif((v[3] == 1) and (v[4] == 2)):
	mes = "dezembro"
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:14:46) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = input("Insira o vetor: ")
v1 = int(v)
if((v[2] == 0) and (v[3] == 1)):
	mes = "janeiro"
elif((v[2] == 0) and (v[3] == 2)):
	mes = "fevereiro"
elif((v[2] == 0) and (v[3] == 3)):
	mes = "marco"
elif((v[2] == 0) and (v[3] == 4)):
	mes = "abril"
elif((v[2] == 0) and (v[3] == 5)):
	mes = "maio"
elif((v[2] == 0) and (v[3] == 6)):
	mes = "junho"
elif((v[2] == 0) and (v[3] == 7)):
	mes = "julho"
elif((v[2] == 0) and (v[3] == 8)):
	mes = "agosto"
elif((v[2] == 0) and (v[3] == 9)):
	mes = "setembro"
elif((v[2] == 1) and (v[3] == 0)):
	mes = "outubro"
elif((v[2] == 1) and (v[3] == 1)):
	mes = "novembro"
elif((v[2] == 1) and (v[3] == 2)):
	mes = "dezembro"
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:16:10) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = input("Insira o vetor: ")
v1 = int(v)
if((v[2] == 0) and (v[3] == 1)):
	mes = "janeiro"
elif((v[2] == 0) and (v[3] == 2)):
	mes = "fevereiro"
elif((v[2] == 0) and (v[3] == 3)):
	mes = "marco"
elif((v[2] == 0) and (v[3] == 4)):
	mes = "abril"
elif((v[2] == 0) and (v[3] == 5)):
	mes = "maio"
elif((v[2] == 0) and (v[3] == 6)):
	mes = "junho"
elif((v[2] == 0) and (v[3] == 7)):
	mes = "julho"
elif((v[2] == 0) and (v[3] == 8)):
	mes = "agosto"
elif((v[2] == 0) and (v[3] == 9)):
	mes = "setembro"
elif((v[2] == 1) and (v[3] == 0)):
	mes = "outubro"
elif((v[2] == 1) and (v[3] == 1)):
	mes = "novembro"
elif((v[2] == 1) and (v[3] == 2)):
	mes = "dezembro"
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:16:53) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v1 = input("Insira o vetor: ")
v = int(v)
if((v[2] == 0) and (v[3] == 1)):
	mes = "janeiro"
elif((v[2] == 0) and (v[3] == 2)):
	mes = "fevereiro"
elif((v[2] == 0) and (v[3] == 3)):
	mes = "marco"
elif((v[2] == 0) and (v[3] == 4)):
	mes = "abril"
elif((v[2] == 0) and (v[3] == 5)):
	mes = "maio"
elif((v[2] == 0) and (v[3] == 6)):
	mes = "junho"
elif((v[2] == 0) and (v[3] == 7)):
	mes = "julho"
elif((v[2] == 0) and (v[3] == 8)):
	mes = "agosto"
elif((v[2] == 0) and (v[3] == 9)):
	mes = "setembro"
elif((v[2] == 1) and (v[3] == 0)):
	mes = "outubro"
elif((v[2] == 1) and (v[3] == 1)):
	mes = "novembro"
elif((v[2] == 1) and (v[3] == 2)):
	mes = "dezembro"
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:17:10) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v1 = input("Insira o vetor: ")
v = int(v1)
if((v[2] == 0) and (v[3] == 1)):
	mes = "janeiro"
elif((v[2] == 0) and (v[3] == 2)):
	mes = "fevereiro"
elif((v[2] == 0) and (v[3] == 3)):
	mes = "marco"
elif((v[2] == 0) and (v[3] == 4)):
	mes = "abril"
elif((v[2] == 0) and (v[3] == 5)):
	mes = "maio"
elif((v[2] == 0) and (v[3] == 6)):
	mes = "junho"
elif((v[2] == 0) and (v[3] == 7)):
	mes = "julho"
elif((v[2] == 0) and (v[3] == 8)):
	mes = "agosto"
elif((v[2] == 0) and (v[3] == 9)):
	mes = "setembro"
elif((v[2] == 1) and (v[3] == 0)):
	mes = "outubro"
elif((v[2] == 1) and (v[3] == 1)):
	mes = "novembro"
elif((v[2] == 1) and (v[3] == 2)):
	mes = "dezembro"
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:17:41) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v1 = input("Insira o vetor: ")
v = (v1,dtype=int)
if((v[2] == 0) and (v[3] == 1)):
	mes = "janeiro"
elif((v[2] == 0) and (v[3] == 2)):
	mes = "fevereiro"
elif((v[2] == 0) and (v[3] == 3)):
	mes = "marco"
elif((v[2] == 0) and (v[3] == 4)):
	mes = "abril"
elif((v[2] == 0) and (v[3] == 5)):
	mes = "maio"
elif((v[2] == 0) and (v[3] == 6)):
	mes = "junho"
elif((v[2] == 0) and (v[3] == 7)):
	mes = "julho"
elif((v[2] == 0) and (v[3] == 8)):
	mes = "agosto"
elif((v[2] == 0) and (v[3] == 9)):
	mes = "setembro"
elif((v[2] == 1) and (v[3] == 0)):
	mes = "outubro"
elif((v[2] == 1) and (v[3] == 1)):
	mes = "novembro"
elif((v[2] == 1) and (v[3] == 2)):
	mes = "dezembro"
print(mes)
-- ERROR:
File "XXXX", line 4
    v = (v1,dtype=int)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:17:55) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v1 = input("Insira o vetor: ")
v1=type=int
if((v[2] == 0) and (v[3] == 1)):
	mes = "janeiro"
elif((v[2] == 0) and (v[3] == 2)):
	mes = "fevereiro"
elif((v[2] == 0) and (v[3] == 3)):
	mes = "marco"
elif((v[2] == 0) and (v[3] == 4)):
	mes = "abril"
elif((v[2] == 0) and (v[3] == 5)):
	mes = "maio"
elif((v[2] == 0) and (v[3] == 6)):
	mes = "junho"
elif((v[2] == 0) and (v[3] == 7)):
	mes = "julho"
elif((v[2] == 0) and (v[3] == 8)):
	mes = "agosto"
elif((v[2] == 0) and (v[3] == 9)):
	mes = "setembro"
elif((v[2] == 1) and (v[3] == 0)):
	mes = "outubro"
elif((v[2] == 1) and (v[3] == 1)):
	mes = "novembro"
elif((v[2] == 1) and (v[3] == 2)):
	mes = "dezembro"
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:18:15) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = input("Insira o vetor: ")
v=type=int
if((v[2] == 0) and (v[3] == 1)):
	mes = "janeiro"
elif((v[2] == 0) and (v[3] == 2)):
	mes = "fevereiro"
elif((v[2] == 0) and (v[3] == 3)):
	mes = "marco"
elif((v[2] == 0) and (v[3] == 4)):
	mes = "abril"
elif((v[2] == 0) and (v[3] == 5)):
	mes = "maio"
elif((v[2] == 0) and (v[3] == 6)):
	mes = "junho"
elif((v[2] == 0) and (v[3] == 7)):
	mes = "julho"
elif((v[2] == 0) and (v[3] == 8)):
	mes = "agosto"
elif((v[2] == 0) and (v[3] == 9)):
	mes = "setembro"
elif((v[2] == 1) and (v[3] == 0)):
	mes = "outubro"
elif((v[2] == 1) and (v[3] == 1)):
	mes = "novembro"
elif((v[2] == 1) and (v[3] == 2)):
	mes = "dezembro"
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:18:42) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = input("Insira o vetor: ")
v = (v,type=int)
if((v[2] == 0) and (v[3] == 1)):
	mes = "janeiro"
elif((v[2] == 0) and (v[3] == 2)):
	mes = "fevereiro"
elif((v[2] == 0) and (v[3] == 3)):
	mes = "marco"
elif((v[2] == 0) and (v[3] == 4)):
	mes = "abril"
elif((v[2] == 0) and (v[3] == 5)):
	mes = "maio"
elif((v[2] == 0) and (v[3] == 6)):
	mes = "junho"
elif((v[2] == 0) and (v[3] == 7)):
	mes = "julho"
elif((v[2] == 0) and (v[3] == 8)):
	mes = "agosto"
elif((v[2] == 0) and (v[3] == 9)):
	mes = "setembro"
elif((v[2] == 1) and (v[3] == 0)):
	mes = "outubro"
elif((v[2] == 1) and (v[3] == 1)):
	mes = "novembro"
elif((v[2] == 1) and (v[3] == 2)):
	mes = "dezembro"
print(mes)
-- ERROR:
File "XXXX", line 4
    v = (v,type=int)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:18:58) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = input("Insira o vetor: ")
v = int(v)
if((v[2] == 0) and (v[3] == 1)):
	mes = "janeiro"
elif((v[2] == 0) and (v[3] == 2)):
	mes = "fevereiro"
elif((v[2] == 0) and (v[3] == 3)):
	mes = "marco"
elif((v[2] == 0) and (v[3] == 4)):
	mes = "abril"
elif((v[2] == 0) and (v[3] == 5)):
	mes = "maio"
elif((v[2] == 0) and (v[3] == 6)):
	mes = "junho"
elif((v[2] == 0) and (v[3] == 7)):
	mes = "julho"
elif((v[2] == 0) and (v[3] == 8)):
	mes = "agosto"
elif((v[2] == 0) and (v[3] == 9)):
	mes = "setembro"
elif((v[2] == 1) and (v[3] == 0)):
	mes = "outubro"
elif((v[2] == 1) and (v[3] == 1)):
	mes = "novembro"
elif((v[2] == 1) and (v[3] == 2)):
	mes = "dezembro"
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:19:50) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = input("Insira o vetor: ")
v = dtype=int
if((v[2] == 0) and (v[3] == 1)):
	mes = "janeiro"
elif((v[2] == 0) and (v[3] == 2)):
	mes = "fevereiro"
elif((v[2] == 0) and (v[3] == 3)):
	mes = "marco"
elif((v[2] == 0) and (v[3] == 4)):
	mes = "abril"
elif((v[2] == 0) and (v[3] == 5)):
	mes = "maio"
elif((v[2] == 0) and (v[3] == 6)):
	mes = "junho"
elif((v[2] == 0) and (v[3] == 7)):
	mes = "julho"
elif((v[2] == 0) and (v[3] == 8)):
	mes = "agosto"
elif((v[2] == 0) and (v[3] == 9)):
	mes = "setembro"
elif((v[2] == 1) and (v[3] == 0)):
	mes = "outubro"
elif((v[2] == 1) and (v[3] == 1)):
	mes = "novembro"
elif((v[2] == 1) and (v[3] == 2)):
	mes = "dezembro"
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:20:07) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = input("Insira o vetor: ")
v = (v, dtype=int)
if((v[2] == 0) and (v[3] == 1)):
	mes = "janeiro"
elif((v[2] == 0) and (v[3] == 2)):
	mes = "fevereiro"
elif((v[2] == 0) and (v[3] == 3)):
	mes = "marco"
elif((v[2] == 0) and (v[3] == 4)):
	mes = "abril"
elif((v[2] == 0) and (v[3] == 5)):
	mes = "maio"
elif((v[2] == 0) and (v[3] == 6)):
	mes = "junho"
elif((v[2] == 0) and (v[3] == 7)):
	mes = "julho"
elif((v[2] == 0) and (v[3] == 8)):
	mes = "agosto"
elif((v[2] == 0) and (v[3] == 9)):
	mes = "setembro"
elif((v[2] == 1) and (v[3] == 0)):
	mes = "outubro"
elif((v[2] == 1) and (v[3] == 1)):
	mes = "novembro"
elif((v[2] == 1) and (v[3] == 2)):
	mes = "dezembro"
print(mes)
-- ERROR:
File "XXXX", line 4
    v = (v, dtype=int)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:20:31) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = input("Insira o vetor: ")
(v,dtype)=int
if((v[2] == 0) and (v[3] == 1)):
	mes = "janeiro"
elif((v[2] == 0) and (v[3] == 2)):
	mes = "fevereiro"
elif((v[2] == 0) and (v[3] == 3)):
	mes = "marco"
elif((v[2] == 0) and (v[3] == 4)):
	mes = "abril"
elif((v[2] == 0) and (v[3] == 5)):
	mes = "maio"
elif((v[2] == 0) and (v[3] == 6)):
	mes = "junho"
elif((v[2] == 0) and (v[3] == 7)):
	mes = "julho"
elif((v[2] == 0) and (v[3] == 8)):
	mes = "agosto"
elif((v[2] == 0) and (v[3] == 9)):
	mes = "setembro"
elif((v[2] == 1) and (v[3] == 0)):
	mes = "outubro"
elif((v[2] == 1) and (v[3] == 1)):
	mes = "novembro"
elif((v[2] == 1) and (v[3] == 2)):
	mes = "dezembro"
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:33:12) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = input("Insira o vetor: ")
v = int(v)
if((v[2] == 0) and (v[3] == 1)):
	mes = "janeiro"
elif((v[2] == 0) and (v[3] == 2)):
	mes = "fevereiro"
elif((v[2] == 0) and (v[3] == 3)):
	mes = "marco"
elif((v[2] == 0) and (v[3] == 4)):
	mes = "abril"
elif((v[2] == 0) and (v[3] == 5)):
	mes = "maio"
elif((v[2] == 0) and (v[3] == 6)):
	mes = "junho"
elif((v[2] == 0) and (v[3] == 7)):
	mes = "julho"
elif((v[2] == 0) and (v[3] == 8)):
	mes = "agosto"
elif((v[2] == 0) and (v[3] == 9)):
	mes = "setembro"
elif((v[2] == 1) and (v[3] == 0)):
	mes = "outubro"
elif((v[2] == 1) and (v[3] == 1)):
	mes = "novembro"
elif((v[2] == 1) and (v[3] == 2)):
	mes = "dezembro"
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:34:32) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = input("Insira o vetor: ")
v = dtype=int
if((v[2] == 0) and (v[3] == 1)):
	mes = "janeiro"
elif((v[2] == 0) and (v[3] == 2)):
	mes = "fevereiro"
elif((v[2] == 0) and (v[3] == 3)):
	mes = "marco"
elif((v[2] == 0) and (v[3] == 4)):
	mes = "abril"
elif((v[2] == 0) and (v[3] == 5)):
	mes = "maio"
elif((v[2] == 0) and (v[3] == 6)):
	mes = "junho"
elif((v[2] == 0) and (v[3] == 7)):
	mes = "julho"
elif((v[2] == 0) and (v[3] == 8)):
	mes = "agosto"
elif((v[2] == 0) and (v[3] == 9)):
	mes = "setembro"
elif((v[2] == 1) and (v[3] == 0)):
	mes = "outubro"
elif((v[2] == 1) and (v[3] == 1)):
	mes = "novembro"
elif((v[2] == 1) and (v[3] == 2)):
	mes = "dezembro"
print(mes)
msg = v(:2), mes,v(4:)
-- ERROR:
File "XXXX", line 30
    msg = v(:2), mes,v(4:)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:36:52) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm = array(["janeiro", "fevereiro","marco","abril",""])
v = input("Insira o vetor: ")
v = int(v[2:4])
if((v[2] == 0) and (v[3] == 1)):
	mes = "janeiro"
elif((v[2] == 0) and (v[3] == 2)):
	mes = "fevereiro"
elif((v[2] == 0) and (v[3] == 3)):
	mes = "marco"
elif((v[2] == 0) and (v[3] == 4)):
	mes = "abril"
elif((v[2] == 0) and (v[3] == 5)):
	mes = "maio"
elif((v[2] == 0) and (v[3] == 6)):
	mes = "junho"
elif((v[2] == 0) and (v[3] == 7)):
	mes = "julho"
elif((v[2] == 0) and (v[3] == 8)):
	mes = "agosto"
elif((v[2] == 0) and (v[3] == 9)):
	mes = "setembro"
elif((v[2] == 1) and (v[3] == 0)):
	mes = "outubro"
elif((v[2] == 1) and (v[3] == 1)):
	mes = "novembro"
elif((v[2] == 1) and (v[3] == 2)):
	mes = "dezembro"
print(mes)
msg = v(:2), mes,v(4:)
-- ERROR:
File "XXXX", line 31
    msg = v(:2), mes,v(4:)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:39:11) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm = array(["janeiro", "fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"])
dd = vm[:2]
mm = vm[2:4]
aa = vm[4:]
print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:39:55) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm = array(["janeiro", "fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"])
v = array(eval(input("Insira o mes: ")))

dd = v[:2]
mm = v[2:4]
aa = v[4:]
print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:40:36) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm = array(["janeiro", "fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"])
v = array(eval(input("Insira o mes: ")))

dd = v[0:2]
mm = v[2:4]
aa = v[4:]
print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:42:15) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm = array(["janeiro", "fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"])
v = array(eval(input("Insira o mes: ")))

dd = v[:2]
mm = v[2:4]
aa = v[4:]
mm = int(mm)
print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:42:35) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm = array(["janeiro", "fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"])
v = array(eval(input("Insira o mes: ")))

dd = v[ :2]
mm = v[2:4]
aa = v[4:]
mm = int(mm)
print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:54:47) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm = array(["janeiro", "fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"])
v = array(eval(input("Insira o mes: ")))

dd = v[:2]
mm = v[2:4]
aa = v[4:]
mm = int(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:54:56) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm = array(["janeiro", "fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"])
v = array(eval(input("Insira o mes: ")))

dd = v[:2]
mm = v[2:4]
aa = v[4:]
mm = int(mm)
print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:56:02) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm = array(["janeiro", "fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"])
v = input("Insira o mes: ")

dd = v[:2]
mm = v[2:4]
aa = v[4:]
mm = int(mm)
print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:03:53) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm = array(["janeiro", "fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"])
v = input("Insira o mes: ")

dd = v[:2]
mm = v[2:4]
aa = v[4:]
mm = int(mm)-1
print(vm[mm])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:05:23) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm = array(["janeiro", "fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"])
v = input("Insira o mes: ")

dd = v[:2]
mm = v[2:4]
aa = v[4:]
mm = int(mm)-1
print(vm[mm])
msg = dd,"de",vm[mm],"de",aa
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:05:41) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm = array(["janeiro", "fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"])
v = input("Insira o mes: ")

dd = v[:2]
mm = v[2:4]
aa = v[4:]
mm = int(mm)-1
msg = dd,"de",vm[mm],"de",aa
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:06:00) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm = array(["janeiro", "fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"])
v = input("Insira o mes: ")

dd = v[:2]
mm = v[2:4]
aa = v[4:]
mm = int(mm)-1
msg = dd+"de"+vm[mm]+"de"+aa
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:06:46) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm = array(["janeiro", "fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"])
v = input("Insira o mes: ")

dd = v[:2]
mm = v[2:4]
aa = v[4:]
mm = int(mm)-1
msg = dd+ " de "+ vm[mm]+" de "+aa
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:06:55) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm = array(["janeiro", "fevereiro","marco","abril","maio","junho","julho","agosto","setembro","outubro","novembro","dezembro"])
v = input("Insira o mes: ")

dd = v[:2]
mm = v[2:4]
aa = v[4:]
mm = int(mm)-1
msg = dd+ " de "+ vm[mm]+" de "+aa
print(msg)
-- EXECUTION TIME:
0.472341
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
